# t5_model

./: .gitignore  pyproject.toml
t5model/: index.html  main.py  model_creator.py
